<resources>
    <string name="app_name">Fake DLNU Pass</string>
    <string name="action_settings">Settings</string>
    <string name="number">Number</string>
    <string name="name">Name</string>
    <string name="sex">Sex</string>
    <string name="faculty">Faculty</string>
    <string name="professional_class">Professional Class</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="generate">Generate</string>
    <string name="choose_photo">Choose Photo</string>
    <string name="warning">Warning</string>
    <string name="content_not_filled">Some items unfilled!</string>
    <string name="confirm">Confirm</string>
    <string name="pass_title_one">大连民族大学</string>
    <string name="pass_title_two">疫情防控期间出入证</string>
</resources>