<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="50dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editTextNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="15dp"
                android:ems="10"
                android:inputType="number"
                android:hint="@string/number"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/editTextName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="15dp"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:hint="@string/name" />

            <EditText
                android:id="@+id/editTextSex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="15dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/sex"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/editTextFaculty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="15dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/faculty"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/editTextClass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="15dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/professional_class"
                android:importantForAutofill="no" />

            <Button
                android:id="@+id/buttonStartTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="15dp"
                android:text="@string/start_time" />

            <Button
                android:id="@+id/buttonEndTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="15dp"
                android:text="@string/end_time" />

            <Button
                android:id="@+id/buttonChoosePhoto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="15dp"
                android:text="@string/choose_photo" />

            <Button
                android:id="@+id/buttonGenerate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="15dp"
                android:text="@string/generate" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>